Fix WelcomeHandler crash when signin link is clicked.

BUG=656153

Review-Url: https://codereview.chromium.org/2431543003
Cr-Commit-Position: refs/heads/master@{#426092}

Former-commit-id: 9ae964cc90a742835cd7c86d8c2d249dde19b4e4